--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-            <asx:abap xmlns:asx="http://www.sap.com/abapxml" version="1.0">
-              <asx:values>
-                <VALUES>
-                  <item>
-                    <CERTKEY>d8ea700d8500b6a257061fccdff625ba90e99ca5918f146fdc622f02d53d5e20</CERTKEY>
-                    <ID>1</ID>
-                  </item>
-                  <item>
-                    <CERTKEY>d8ea700d8500b6a257061fccdff625ba90e99ca5918f146fdc622f02d53d5e20</CERTKEY>
-                    <ID>2</ID>
-                  </item>
-                </VALUES>
-              </asx:values>
-            </asx:abap>
+[{"certKey":"2bc3c555d7253c0f519787945543152eca6cee15002e6a23cc5969bd8212c198"}]
